[project]
name = "cumulus-fhir-support"
requires-python = ">= 3.10"
dependencies = [
    # Manually specify aiobotocore with a minimum version, to avoid some dependency hell.
    # (fsspec -> s3fs -> aiobotocore -> botocore are all tightly pinned - adding the version here
    # avoids a lot of backtracking on pip's part to old versions for some reason).
    # Search "fsspec aiobotocore boto3" for more details and other frustrated people.
    "aiobotocore >= 3",
    "fhirclient >= 4.1",
    "fsspec[s3]",
    "httpx",
    "inscriptis",
    "jwcrypto",
    "pyarrow >= 12",
]
authors = [
  { name="Michael Terry", email="michael.terry@childrens.harvard.edu" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["description", "version"]

[project.optional-dependencies]
tests = [
    "ddt",
    "fsspec",
    "pytest",
    "pytest-cov",
    "respx",
    "time-machine",
]
dev = [
    "pre-commit",
    # Ruff is using minor versions for breaking changes until their 1.0 release.
    # See https://docs.astral.sh/ruff/versioning/
    "ruff < 0.16",  # keep in rough sync with .pre-commit-config.yaml
]

[project.urls]
"Homepage" = "https://github.com/smart-on-fhir/cumulus-fhir-support"

[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "tests/",
    "LICENSE",
    "*.md",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
allowed-confusables = ["’"]  # allow proper apostrophes
select = [
    "A",  # prevent using keywords that clobber python builtins
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
    "RUF",  # the ruff developer's own rules
    "S",  # bandit security warnings
    "UP",  # alert you when better syntax is available in your python version
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # init files hold API, so not using imports is intentional
"tests/**" = ["S"]  # tests do suspicious stuff that's fine, actually
